--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,5 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+MONGO_URL="mongodb://localhost:27017"
+PORT=8080
 # dependencies
 /node_modules
 /.pnp
