--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.1",
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.1"
