--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "mongodb": "^4.8.1",
-    "mongoose": "^6.5.1"
+    "mongoose": "^6.5.1",
+    "nodemon": "^2.0.20"
   }
 }
