--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "method-override": "^3.0.0",
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.1",
     "nodemon": "^2.0.20"
